--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 :root{
     /*variable color we will use* used in dark-white mode*/
-    /*--color-primary:#191d2d; for dark color*/
-    --color-primary:#2F3C7E;
-    --back-of-img: #222e61;
+    /*--color-primary:#191d2d; for dark color#222e61*/
+    --color-primary:#1d2a35;
+    --back-of-img: #29353e;
     --color-secondary: #23d0dc;
-    --color-background: #222e61;
+    --color-background:#1d2a35 ;
     --color-white: #FFFFFF;
     --color-black: #000;
     --color-grey0: #f8f8f8;
@@ -30,8 +30,37 @@
     --color-sub-btn-active:#f32283ee;
     --color-sub-btn:#a9a9a9;
     --color-cont-btn:  #94229a;
+    --color-theme-btn: #454e56;
+    --color-theme-btn-2:#b2becd;
     --border-radius: 14px;
     --box-shadow: 0 3px 15px rgba(0,0,0,.3);
+}
+
+.light-mode{
+  /*variable color we will use* used in light-white mode*/
+    /*--color-primary:#191d2d; for dark color*/
+    --color-primary:#e4e5f1;
+    --back-of-img: #484b6a;
+    --color-secondary: #ff3452;
+    --color-background: #e4e5f1;
+    --color-white: #282c34;
+    --color-control-white: #ffffff;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #454e56;
+    --color-grey-2: #919aa4;
+    --color-grey-3: #606b74;
+    --color-grey-4: #454e56;
+    --color-grey-5: #b2becd;
+    --color-grey-6: #12181b;
+    --color-icon-1: #02465f;
+    --color-ytb-1: #e90202;
+    --color-blog-active:#e11a4cee;
+    --color-sub-btn-active:#f32283ee;
+    --color-sub-btn:#a9a9a9;
+    --color-cont-btn:  #94229a;
+    --color-theme-btn: #e8e8e8;
+    --color-theme-btn-2:#3b3a3a;
 }
 body{
     font-family: 'Signika', sans-serif;
@@ -48,10 +77,11 @@ a{
 }
 
 header{
-    height: 100vh;
+    min-height: 100vh;
     color: var(--color-white);
     overflow: hidden;
 }
+
 
 section{
     min-height: 100vh;
@@ -128,7 +158,7 @@ section{
         box-shadow: var(--box-shadow);
         i{
             font-size: 1.4rem;
-            color: var(--color-white);
+            color: var(--color-control-white);
             pointer-events: none;
         }
         &:hover{
@@ -145,12 +175,37 @@ section{
         }
     }
 }
+
+/*dark-white mode*/
+.theme-btn{
+  top: 5%;
+  right: 5%;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background-color: var(--color-theme-btn);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 3px 10px rgba(0,0,0,.3);
+  transition: all .1 ease-in-out;
+}
+.theme-btn:active {
+  transform: translateY(-4px);
+}
+.theme-btn i{
+  font-size: 1.5rem;
+  color: var(--color-theme-btn-2);
+  pointer-events: none;
+}
 /*header content css-adding*/
 
 .header-content{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 100%;
+    min-height: 100vh;
     .left-header{
         display: flex;
         align-items: center;
@@ -204,7 +259,7 @@ section{
     }
 }
 
-/*About conter css coding*/
+/*About container css coding*/
 .about-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -264,13 +319,16 @@ section{
     color: var(--color-grey-1);
   }
   .about-container .left-about h4 {
-    font-size: 2rem;
+    font-size: 2.3rem;
     text-transform: uppercase;
   }
   
   .about-stats {
-
-    padding: 4rem;
+    border: 1px solid var(--color-grey-3);
+    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.65);
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, .1);
+    padding: 2rem;
   }
   .about-stats .progress-bars {
     display: grid;
@@ -278,12 +336,23 @@ section{
     grid-gap: 3rem;
   }
   .about-stats .progress-bars .progress-bar {
+    border: 1px solid var(--color-grey-3);
     border-radius: 10px;
     padding: .5rem;
-    background-image: linear-gradient(to right top, #519389, #388789, #1f7b88, #056e86, #006082, #00587b, #005074, #00486d, #004464, #00405c, #003c53, #00384b);
-
     display: flex;
     flex-direction: column;
+  }
+  .about-stats .progress-bars .progress-bar:hover{
+    background-color: rgba(0, 0, 0, .2);
+    border-color: var(--color-secondary);
+    animation-name: anim-progress;
+    animation-duration: 1s;
+  }
+  @keyframes anim-progress {
+    0%   {background-color: purple;}
+    25%  {background-color: gold;}
+    50%  {background-color: navy;}
+    100% {background-color: palegreen;}
   }
   .about-stats .progress-bars .progress-bar .prog-title {
     text-transform: uppercase;
@@ -313,36 +382,47 @@ section{
     width: 60%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .html {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 90%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .css {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 70%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .js {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 40%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .cpp {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 95%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .c {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 100%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .php {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 85%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .db {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 90%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .android {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 92%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .asp {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 65%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .java {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 65%;
   }
   .about-stats .progress-bars .progress-bar .progress-con .progress .git {
+    background-image: linear-gradient(to right top, #320101, #420106, #530009, #640009, #750007, #810106, #8e0204, #9a0501, #a40a01, #ae0f01, #b91401, #c31900);
     width: 70%;
   }
   .stat-title {
@@ -607,6 +687,7 @@ section{
   margin: 0 0.5rem;
   transition: all 0.1s ease-in-out;
 }
+/*icon rotate korbe tar keyframes*/
 @keyframes rotateIcon {
   from {
     transform: rotate(0deg);
@@ -789,4 +870,242 @@ section{
   transform: translateX(0);
   transition: all 0.4s ease-out;
 }
+
+/*For smaller screen 600px*/
+
+@media screen and (max-width: 600px) {
   
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+    padding-top: 2.5rem;
+  }
+  .section{
+    padding: 2rem 2.5rem !important;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
+
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .about-stats .progress-bars {
+    grid-template-columns: 1fr;
+  }
+
+  .portfolios {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+    margin-top: 1rem;
+  }
+
+  .blogs {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+
+  .contact-content-con {
+    flex-direction: column;
+  }
+  .contact-content-con .vl{
+    display: none;
+  }
+  .contact-content-con .right-contact {
+    margin-left: 0;
+    margin-top: 2.5rem;
+  }
+
+  .contact-content-con .right-contact .i-c-2 {
+    flex-direction: column;
+  }
+
+  .contact-content-con .right-contact .i-c-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
+
+
+  .main-title h2 {
+    font-size: 2rem;
+  }
+  .main-title h2 span {
+    font-size: 2.5rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .section {
+    padding: 7rem 3rem;
+  }
+
+  .about-stats .progress-bars {
+    grid-template-columns: 1fr;
+  }
+
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+  }
+
+  .timeline {
+    grid-template-columns: 1fr;
+  }
+
+  .main-title h2 {
+    font-size: 3rem;
+  }
+  .main-title h2 span {
+    font-size: 3rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 970px) and (min-width: 701px) {
+
+  .section{
+    padding: 7rem 6rem;
+  }
+
+  header {
+    padding: 0;
+  }
+  header .right-header{
+    padding: 0 !important;
+  }
+  .theme-btn {
+    width: 50px;
+    height: 50px;
+  }
+
+  .header-content {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+
+  .left-header .h-shape {
+    display: none;
+  }
+
+  .right-header{
+    grid-row: 1;
+    padding-right: 0rem !important;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .right-header .name{
+    font-size: 2.5rem !important;
+    text-align: center;
+    padding-top: 3rem;
+  }
+
+  .header-content .left-header .image{
+    margin: 0 auto;
+    width: 90%;
+  }
+  .controlls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controlls .control{
+    margin: .6rem 1rem;
+  }
+  
+}
+
+@media screen and (max-width: 1070px) {
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    padding-top: 2.5rem;
+  }
+  .portfolios{
+    grid-template-columns: 1fr 1fr;
+  }
+  .blogs{
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-title h2 {
+    font-size: 4rem;
+  }
+  .main-title h2 span {
+    font-size: 4rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 5rem;
+  }
+}
+
+@media screen and (max-width: 1432px) {
+  header{
+    padding: 0 !important;
+  }
+  .section{
+    padding: 7rem 11rem;
+  }
+
+  .contact-content-con .vl{
+    display: none;
+  }
+  
+
+  .contact-content-con {
+    flex-direction: column;
+  }
+  .contact-content-con .right-contact {
+    margin-left: 0;
+    margin-top: 2.5rem;
+  }
+
+  .contact-content-con .right-contact .i-c-2 {
+    flex-direction: column;
+  }
+
+  .contact-content-con .right-contact .i-c-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
+}
+
+/* @media screen and (max-width: 1250px) {
+  .blogs {
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 6rem;
+  }
+
+  .portfolios {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .header-content .right-header {
+    padding-right: 9rem;
+  }
+}
+@media screen and (max-width: 660px) {
+  .blogs {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .portfolios {
+    grid-template-columns: repeat(1, 1fr);
+  }
+} */
+
+
